@@ -1,4 +1,4 @@
-# $NetBSD: ad.mips64eb,v 1.71 2011/10/08 13:14:03 mbalmer Exp $
+# $NetBSD: ad.mips64eb,v 1.72 2011/10/13 22:08:16 joerg Exp $
 ./libexec/ld.elf_so-64				base-compat-shlib	compat,pic
 ./libexec/ld.elf_so-o32				base-sysutil-bin	compat,pic
 ./usr/lib/64					base-compat-lib
@@ -237,6 +237,8 @@
 ./usr/lib/64/libskey.so.2.0			base-compat-shlib	compat,pic,skey
 ./usr/lib/64/libsl.so.5				base-compat-shlib	compat,pic,kerberos
 ./usr/lib/64/libsl.so.5.0			base-compat-shlib	compat,pic,kerberos
+./usr/lib/64/libsqlite3.so.1			base-compat-shlib	compat,pic
+./usr/lib/64/libsqlite3.so.1.0			base-compat-shlib	compat,pic
 ./usr/lib/64/libss.so.6				base-compat-shlib	obsolete
 ./usr/lib/64/libss.so.6.0			base-compat-shlib	obsolete
 ./usr/lib/64/libssh.so.18			base-compat-shlib	compat,pic,crypto
@@ -528,6 +530,8 @@
 ./usr/lib/o32/libskey.so.2.0			base-compat-shlib	compat,pic,skey
 ./usr/lib/o32/libsl.so.5			base-compat-shlib	compat,pic,kerberos
 ./usr/lib/o32/libsl.so.5.0			base-compat-shlib	compat,pic,kerberos
+./usr/lib/o32/libsqlite3.so.1			base-compat-shlib	compat,pic
+./usr/lib/o32/libsqlite3.so.1.0			base-compat-shlib	compat,pic
 ./usr/lib/o32/libss.so.6			base-compat-shlib	obsolete
 ./usr/lib/o32/libss.so.6.0			base-compat-shlib	obsolete
 ./usr/lib/o32/libssh.so.18			base-compat-shlib	compat,pic,crypto
