@@ -1,4 +1,4 @@
-# $NetBSD: md.amd64,v 1.143 2011/10/08 13:14:03 mbalmer Exp $
+# $NetBSD: md.amd64,v 1.144 2011/10/13 22:08:17 joerg Exp $
 ./dev/lms0					base-obsolete		obsolete
 ./dev/mms0					base-obsolete		obsolete
 ./libexec/ld.elf_so-i386			base-sys-shlib		compat,pic
@@ -242,6 +242,8 @@
 ./usr/lib/i386/libskey.so.2.0			base-compat-shlib	compat,pic,skey
 ./usr/lib/i386/libsl.so.5			base-compat-shlib	compat,pic,kerberos
 ./usr/lib/i386/libsl.so.5.0			base-compat-shlib	compat,pic,kerberos
+./usr/lib/i386/libsqlite3.so.1			base-compat-shlib	compat,pic
+./usr/lib/i386/libsqlite3.so.1.0		base-compat-shlib	compat,pic
 ./usr/lib/i386/libssh.so.18			base-compat-shlib	compat,pic
 ./usr/lib/i386/libssh.so.18.0			base-compat-shlib	compat,pic
 ./usr/lib/i386/libssl.so.9			base-compat-shlib	compat,pic
